--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Football_Field_Booking" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#0D5E03</item>
+        <item name="colorPrimaryVariant">#0D5E03</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -16,9 +16,12 @@
     <style name="FontLogo">
         <item name="android:fontFamily">@font/comfor</item>
     </style>
-    <style name="imageButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:layout_marginRight">18dp</item>
-        <item name="android:layout_marginLeft">18dp</item>
+    <style name="imageButtonHomeCus" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:layout_marginLeft">25dp</item>
+        <item name="android:scaleType">fitStart</item>
         <item name="android:background">@drawable/rounded_corner</item>
     </style>
     <style name="FontText">
@@ -26,7 +29,21 @@
     </style>
     <style name="TextDecription" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/comfor</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="TextFieldLoginRegister" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="boxCornerRadiusBottomEnd">40dp</item>
+        <item name="boxCornerRadiusBottomStart">40dp</item>
+        <item name="boxCornerRadiusTopEnd">40dp</item>
+        <item name="boxCornerRadiusTopStart">40dp</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeWidthFocused">0dp</item>
+    </style>
+    <style name="ButtonLoginRegister"  parent="Widget.MaterialComponents.Button">
+
+        <item name="cornerRadius">40dp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
