--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#53AE56</color>
+    <color name="red">#F4364C</color>
+    <color name="white_gray">#D3D3D3</color>
+    <color name="gray">#EFF1FE</color>
 </resources>
