--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,7 +25,7 @@
         <item name="android:background">@drawable/rounded_corner</item>
     </style>
     <style name="FontText">
-        <item name="android:fontFamily">@font/comfor</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
     <style name="TextDecription" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/comfor</item>
