--- a/app/src/main/res/layout/activity_create_football_field.xml
+++ b/app/src/main/res/layout/activity_create_football_field.xml
@@ -8,94 +8,163 @@
     android:orientation="vertical"
     tools:context=".CreateFootballFieldActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create Football Field"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Create Football Field"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name: "
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/edtFootballFieldName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location: "
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/edtLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Type: "
+                    android:textSize="16dp"/>
+                <Spinner
+                    android:id="@+id/spType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Image: "
+                    android:textSize="16dp"/>
+                <Button
+                    android:id="@+id/btnChooseImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose image"/>
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/img_photo"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:scaleType="fitStart"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:text="Working hours"
+                />
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp"
+                android:layout_gravity="center"
+                android:columnCount="5"
+                android:numColumns="5">
+                <EditText
+                    android:id="@+id/edtStartTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="5dp"
+                    android:background="@drawable/border"
+                    android:hint="00:00 AM"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="to"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"/>
+                <EditText
+                    android:id="@+id/edtEndTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/border"
+                    android:hint="11:00 PM"/>
+                <EditText
+                    android:id="@+id/edtPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:background="@drawable/border"
+                    android:layout_marginLeft="40dp"
+                    android:hint="Price/h"/>
+                <ImageButton
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="20dp"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_baseline_remove_circle_24"
+                    android:backgroundTint="@android:color/background_light"
+                    />
+            </GridLayout>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/ic_baseline_add_circle_24"
+                android:backgroundTint="@android:color/background_light"/>
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name: "
-                android:textSize="16dp"/>
-            <EditText
-                android:id="@+id/edtFootballFieldName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Location: "
-                android:textSize="16dp"/>
-            <EditText
-                android:id="@+id/edtLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Type: "
-                android:textSize="16dp"/>
-            <Spinner
-                android:id="@+id/spType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Image: "
-                android:textSize="16dp"/>
-            <Button
-                android:id="@+id/btnChooseImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Choose image"/>
-        </LinearLayout>
-        <ImageView
-            android:id="@+id/img_photo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:scaleType="fitStart"
-            android:layout_gravity="center"/>
-
         <Button
             android:id="@+id/btnCreateNewField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create"
             android:layout_gravity="center"
-            android:onClick="clickToCreate"
-            />
+            android:onClick="clickToCreate"/>
     </LinearLayout>
+
 
 </LinearLayout>
