--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="red">#F4364C</color>
     <color name="white_gray">#D3D3D3</color>
     <color name="gray">#EFF1FE</color>
+    <color name="greySecondary">#8B000000</color>
 </resources>
