Commit Filter again

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,4 +83,14 @@
         <item name="android:paddingBottom">16dp</item>
         <item name="android:layout_marginBottom">4dp</item>
     </style>
+
+    <style name="Body1">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Caption">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
