--- a/app/src/main/res/layout/fragment_detaill_booking.xml
+++ b/app/src/main/res/layout/fragment_detaill_booking.xml
@@ -1,23 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="15dp"
     android:background="#EFF1FE"
-    android:orientation="vertical"
-    tools:context=".fragments.HistoryNowFragment">
+    tools:context=".fragments.OwnerDetailBookingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="359dp"
+        android:layout_height="503dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="110dp"
+            android:background="#EFF1FE"
+            android:orientation="horizontal">
+
+            <TableRow
+                android:layout_width="261dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="77dp"
+                    android:layout_height="62dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/user" />
+            </TableRow>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="bottom|top"
+                android:orientation="vertical">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp">
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="104dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="User Name:" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="176dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="Nguyen Van Anh Thy" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp">
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="104dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="Phone Number:" />
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="177dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="09765436784" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp">
+
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="104dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="Address:" />
+
+                    <TextView
+                        android:id="@+id/textView18"
+                        android:layout_width="177dp"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom|top"
+                        android:text="HCM" />
+                </TableRow>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="#FFFFFF"
             android:orientation="horizontal">
 
@@ -34,7 +123,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="304dp"
+            android:layout_height="334dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="#FFFFFF"
@@ -258,7 +347,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="104dp"
                 android:gravity="start|end"
                 android:textAlignment="center"
                 tools:ignore="RtlCompat">
@@ -280,4 +369,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</FrameLayout>
